Updated readme after initial release